--- a/css/estilos.css
+++ b/css/estilos.css
@@ -149,7 +149,7 @@ body {
 /****Experiencia****/
 .experience-section {
     display: grid;
-    margin: 100px 80px;
+    margin: 100px 80px 50px 80px;
     grid-template-columns: 40% 60%;
     column-gap: 10px;
 }
@@ -181,6 +181,14 @@ body {
     margin: 30px 30%;
     border: #43f7fc solid 2px;
     border-radius: 8px;
+    transition: 1s;
+}
+
+.boton-cv:hover {
+    color: #01052e;
+    background-color: #43f7fc;
+    transform: scale(1.08);
+    margin: 30px 25%;
 }
 
 .slideshow-container {
@@ -189,6 +197,11 @@ body {
 
 .slideshow-container img {
     border-radius: 20px;
+    transition: 1s;
+}
+
+.slideshow-container img:hover {
+    transform: scale(1.04);
 }
 
 /* Next & previous buttons */
@@ -212,6 +225,7 @@ body {
     right: 10px;
     border-radius: 3px 0 0 3px;
 }
+
 .prev {
     left: 45%;
     border-radius: 3px 0 0 3px;
@@ -257,22 +271,50 @@ body {
 }
 
 /****HABILIDADES****/
-.skills-container {
-    margin: 0px 20% 200px;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-gap: 20px;
+.logo-container {
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    position: relative;
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
-.skills-container .grid-item img {
-    width: 80px;
+.logo-container img {
+    width: 120px;
     height: auto;
-    transition: 0.5s;
+    display: inline-block;
+    margin-right: 20px;
+    transition: filter 0.3s ease;
 }
 
-.skills-container .grid-item img:hover {
-    transform: scale(1.15);
-    filter: brightness(1.15);
+.logo-container img:hover {
+    filter: hue-rotate(-65deg) brightness(220%);
+}
+
+.logos{
+    margin: 0px 65px 0px 60px;
+}
+
+@keyframes logo-animation {
+    0% {
+        transform: translateX(0%);
+    }
+
+    100% {
+        transform: translateX(calc(-100% - 20px));
+        /* Tamaño del logo + margen */
+    }
+}
+
+.logo-container .logo-wrapper {
+    display: flex;
+    position: absolute;
+    animation: logo-animation 120s linear infinite;
+}
+
+.logo-container .logo-wrapper img {
+    animation: logo-animation 120s linear infinite reverse;
 }
 
 /****TRABAJOS****/
