--- a/css/estilos.css
+++ b/css/estilos.css
@@ -270,6 +270,127 @@ body {
     }
 }
 
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 180px;
+    padding-bottom: 150px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background: rgb(214, 62, 250);
+    background: linear-gradient(47deg, rgba(214, 62, 250, 1) 0%, rgba(121, 12, 168, 1) 20%, rgba(22, 68, 154, 1) 64%, rgba(47, 177, 201, 1) 89%, rgba(67, 247, 252, 1) 100%);
+    background-size: cover;
+    margin: auto;
+    padding: 30px 250px 60px 80px;
+    border: 1px solid #000000;
+    border-radius: 30px;
+    width: 80%;
+}
+
+.titulo-exp {
+    color: white;
+    font-family: "Poppins";
+    font-size: 50px;
+}
+
+.subtitulo-exp {
+    color: white;
+    font-family: "Poppins";
+    margin-top: -10px;
+    font-size: 20px;
+}
+
+.descrip-exp {
+    color: white;
+    font-family: "Poppins";
+    font-weight: lighter;
+    font-size: 18px;
+}
+
+/* The Close Button 1 */
+.close1 {
+    padding-left: 110%;
+    color: white;
+    float: right;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.close1:hover,
+.close1:focus {
+    color: rgb(214, 62, 250);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* The Close Button 2 */
+.close2 {
+    padding-left: 110%;
+    color: white;
+    float: right;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.close2:hover,
+.close2:focus {
+    color: rgb(214, 62, 250);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* The Close Button 3 */
+.close3 {
+    padding-left: 110%;
+    color: white;
+    float: right;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.close3:hover,
+.close3:focus {
+    color: rgb(214, 62, 250);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* The Close Button 4 */
+.close4 {
+    padding-left: 110%;
+    color: white;
+    float: right;
+    font-size: 60px;
+    font-weight: bold;
+}
+
+.close4:hover,
+.close4:focus {
+    color: rgb(214, 62, 250);
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /****HABILIDADES****/
 .logo-container {
     width: 100%;
@@ -292,8 +413,8 @@ body {
     filter: hue-rotate(-65deg) brightness(220%);
 }
 
-.logos{
-    margin: 0px 65px 0px 60px;
+.logos {
+    margin: 0px 70px 0px 70px;
 }
 
 @keyframes logo-animation {
